--- a/HelloworldGwk/app/src/main/res/values/strings.xml
+++ b/HelloworldGwk/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HelloworldGwk</string>
+    <string name="edit_mes">Enter a message</string>
+    <string name="btn_send">Send</string>
+    <string name="text_v">Display Text</string>
 </resources>
