--- a/HelloworldGwk/app/src/main/res/values-zh-rCN/strings.xml
+++ b/HelloworldGwk/app/src/main/res/values-zh-rCN/strings.xml
@@ -4,4 +4,7 @@
     <string name="edit_mes">请输入信息</string>
     <string name="btn_send">发送</string>
     <string name="text_v">显示信息</string>
+    <string name="navigation_view_header_title">要做的任务</string>
+    <string name="list_title">任务列表</string>
+    <string name="statistics_title">统计信息</string>
 </resources>
