--- a/HelloworldGwk/app/src/main/res/values/strings.xml
+++ b/HelloworldGwk/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="edit_mes">Enter a message</string>
     <string name="btn_send">Send</string>
     <string name="text_v">Display Text</string>
+    <string name="navigation_view_header_title">TO-DOs</string>
+    <string name="list_title">TO-DO List</string>
+    <string name="statistics_title">Statistics</string>
 </resources>
